test/tests/compiler/18_structures/invalid_types/invalid_struct_declaration/incomplete_member.plx
type struc s; #  declare incomplete structure type

type struc a(    #  can't declare a struct member with incomplete type
    g: struc s    )
